--- a/public/index.css
+++ b/public/index.css
@@ -2,6 +2,7 @@
 	margin: 0;
 	padding: 0;
 	border: none;
+	box-sizing: border-box;
 	color: rgba(255, 255, 255, 0.9);
 	font-family: 'Open Sans', sans-serif;
 }
