--- a/src/components/styles/SignInWithProvider.module.css
+++ b/src/components/styles/SignInWithProvider.module.css
@@ -3,7 +3,7 @@
 	width: 85vw;
 	display: flex;
 	align-items: center;
-	margin-bottom: 12px;
+	margin: 0 auto 12px auto;
 	background-color: rgba(255, 255, 255, 0.1);
 	border-radius: 5px;
 }
