--- a/src/components/styles/SignUp.module.css
+++ b/src/components/styles/SignUp.module.css
@@ -1,16 +1,15 @@
 .background {
 	width: 100vw;
 	height: 100vh;
+	position: fixed;
+	left: 0;
+	top: 0;
+	z-index: -1000;
 	background-color: #2a2a2a;
-	text-align: center;
 }
 .container {
-	width: 100vw;
-	height: 90vh;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
+	margin-top: 75px;
+	text-align: center;
 }
 .container .btn {
 	margin-top: 15px;
@@ -24,7 +23,7 @@
 	flex-flow: row nowrap;
 	width: 85vw;
 	font-size: 1.1rem;
-	margin: 22px 0;
+	margin: 22px auto;
 	font-weight: 500;
 }
 .or p {
@@ -34,4 +33,24 @@
 	border-top: 1px solid rgba(255, 255, 255, 0.9);
 	align-self: center;
 	width: 100%;
+}
+.container > a {
+	margin-top: 15px;
+	font-size: 18px;
+	text-decoration: none;
+	/* color: #bb86fc; */
+}
+.error {
+	color: #cf6679;
+}
+.wrongCreds {
+	text-align: center;
+	position: fixed;
+	width: 100%;
+	top: 0;
+	line-height: 50px;
+	margin: 0 auto;
+	background-color: #cf6679;
+	color: black;
+	height: 50px;
 }
