--- a/public/index.css
+++ b/public/index.css
@@ -37,11 +37,16 @@ input:focus {
 	min-height: 45px;
 	border-radius: 5px;
 }
-.btnPrimary:disabled {
+.btnPrimary:disabled,
+.btnSecondary:disabled {
 	background-color: rgba(255, 255, 255, 0.12);
 	color: rgba(255, 255, 255, 0.34);
 }
-.btnPrimary:disabled {
-	background-color: rgba(255, 255, 255, 0.12);
-	color: rgba(255, 255, 255, 0.34);
+.btnSecondary {
+	background-color: #cf6679;
+	font-size: 1.1rem;
+	color: #191919dc;
+	width: 85%;
+	min-height: 45px;
+	border-radius: 5px;
 }
