--- a/src/components/styles/Post.module.css
+++ b/src/components/styles/Post.module.css
@@ -1,84 +1,6 @@
-.background {
-	background-color: rgba(255, 255, 255, 0.1);
-	font-size: 16px;
+.iconBlack {
+	@apply w-8 h-8;
 }
-.postContainer {
-	padding: 15px 18px 15px 18px;
-	color: #eee;
-}
-.topFlexbox {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-}
-.user {
-	display: flex;
-	align-items: center;
-}
-.user p {
-	line-height: 150%;
-}
-.postTime {
-	font-size: 14px;
-	margin-bottom: 17px;
-}
-.article {
-	margin-top: 15px;
-}
-.userImage {
-	border-radius: 100px;
-	width: 75px;
-	height: 75px;
-	margin-right: 15px;
-}
-.hr {
-	height: 2px;
-	border-top: solid 0.5px rgba(255, 255, 255, 0.9);
-	margin-top: 12px;
-}
-.bottomFlexbox {
-	padding-top: 12px;
-	display: flex;
-	justify-content: space-between;
-}
-.separateContainer {
-	display: flex;
-}
-.iconContainer {
-	display: flex;
-	align-items: center;
-	margin-right: 10px;
-}
-.iconContainer img {
-	width: 30px;
-}
-.iconContainer span {
-	margin-left: 6px;
-}
-
-/* COMMENT SECTION STYLING HERE */
-.commentSection {
-	background-color: #232323;
-}
-.commentSection > div {
-	padding-top: 20px;
-}
-.commentSection > div:last-of-type {
-	padding-bottom: 20px;
-}
-.addCommentForm {
-	margin: 0 8px;
-}
-.addCommentForm input {
-	margin-top: 0;
-	width: 100%;
-}
-.addCommentForm button {
-	width: 48%;
-}
-.addCommentForm div:first-of-type {
-	margin-top: 5px;
-	padding-bottom: 20px;
-	display: flex;
-	justify-content: space-between;
+svg.iconBlack path {
+	fill: rgba(0, 0, 0, 0.9);
 }
