--- a/src/components/styles/PostSignUp.module.css
+++ b/src/components/styles/PostSignUp.module.css
@@ -1,104 +1,6 @@
-.background {
-	width: 100vw;
-	height: 100vh;
-	position: fixed;
-	top: 0;
-	z-index: -1000;
-	left: 0;
-	background-color: #2a2a2a;
+.genderButton {
+	@apply inline-block w-24 focus:outline-none px-4 py-2 rounded-md shadow bg-white;
 }
-.container {
-	text-align: center;
-	min-height: 100vh;
-	width: 100vw;
-	padding-top: 10px;
-}
-.container .btn {
-	margin-top: 15px;
-}
-.title {
-	margin-bottom: 25px;
-	line-height: 40px;
-	font-weight: 600;
-}
-.dateOfBirth {
-	margin-top: 15px;
-}
-.dateOfBirth > .div {
-	margin: 15px auto 0 auto;
-	display: flex;
-	width: 85%;
-	justify-content: space-between;
-}
-.dateOfBirth select {
-	padding: 10px 18px;
-	border-radius: 5px;
-	height: 45px;
-	background-color: rgba(255, 255, 255, 0.1);
-}
-.dateOfBirth option {
-	background-color: #404040;
-}
-.dateOfBirth > p {
-	font-size: 21px;
-}
-.avatarSelect {
-	display: flex;
-	align-items: center;
-	width: 85vw;
-	margin: 15px auto;
-}
-.avatarSelect div {
-	background-color: rgba(255, 255, 255, 0.1);
-	width: 100px;
-	height: 100px;
-	border-radius: 100px;
-	background-size: cover;
-	background-position: center;
-}
-.avatarSelect label {
-	display: flex;
-	justify-content: center;
-	width: 45vw;
-	margin-left: 15px;
-	align-items: center;
-	height: 45px;
-	background-color: rgba(255, 255, 255, 0.1);
-	border-radius: 5px;
-}
-.avatarSelect input[type='file'] {
-	display: none;
-}
-.gender p {
-	font-size: 21px;
-	margin: 12px 0;
-}
-.gender > .genderDiv {
-	width: 85%;
-	margin: 0 auto;
-	display: flex;
-	justify-content: space-between;
-}
-.gender .error,
-.dateOfBirth .error {
-	margin-top: 10px;
-}
-.gender button {
-	display: inline-block;
-	width: 45%;
-	min-height: 45px;
-	border-radius: 5px;
-	background-color: rgba(255, 255, 255, 0.1);
-}
-.gender .active {
-	color: #bb86fc;
-}
-.active:focus {
-	outline-style: none;
-}
-.error {
-	color: #cf6679;
-}
-.container button[type='submit'] {
-	margin-bottom: 30px;
+.selectContainer select {
+	@apply py-2 px-4 bg-white shadow rounded text-base focus:outline-none mx-2 focus:ring-primary focus:ring-2 disabled:opacity-50;
 }
